--- a/front/index.html
+++ b/front/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<!-- <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css" /> -->
+		<link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css" />
 		<link rel="stylesheet" href="./app.css" />
 		<title>Wapcon</title>
 		<style>
