--- a/front/index.html
+++ b/front/index.html
@@ -16,6 +16,7 @@
 		<script>
 			// window.spawn = require('child_process').spawn;
 			window.electron = require('electron');
+			window.fs = require('fs');
 			window.shell = require('electron').shell;
 
 			document.addEventListener('click', (event)=>{
